[gd_scene load_steps=33 format=3 uid="uid://c4ktyer38vnk4"]

[ext_resource type="Script" uid="uid://dff3bryl7reu0" path="res://Characters/Enemies/Monster/Monster.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cryka57a5ond" path="res://Resources/2D Pixel Dungeon Asset Pack/character and tileset/Dungeon_Character.png" id="2_ih4cu"]
[ext_resource type="Shader" uid="uid://3dwl6n8jn3rg" path="res://Characters/Enemies/Monster/Flash.gdshader" id="2_q8gf7"]
[ext_resource type="Texture2D" uid="uid://b432xtm7oopgf" path="res://Resources/enemies/monster.png" id="2_ue8vv"]
[ext_resource type="FontFile" uid="uid://wige0wqmw7c7" path="res://Resources/fonts/Early GameBoy.ttf" id="3_801wt"]
[ext_resource type="Script" uid="uid://drf17f1mu335f" path="res://StateMachine/StateMachine.gd" id="4_8alai"]
[ext_resource type="AudioStream" uid="uid://4yrc141s3pxi" path="res://Resources/audio/sfx/slash.ogg" id="4_jfj5b"]
[ext_resource type="Script" uid="uid://brs63mfox6y58" path="res://Characters/Enemies/Monster/MonsterStates/MonsterChaseState.gd" id="5_3nu2b"]
[ext_resource type="Script" uid="uid://b2etgy67pp3ug" path="res://Characters/Enemies/Monster/MonsterStates/MonsterIdleState.gd" id="6_y0a0h"]
[ext_resource type="Script" uid="uid://dy3ivdu5piffg" path="res://Characters/Enemies/Monster/MonsterStates/MonsterStunnedState.gd" id="7_r742e"]
[ext_resource type="Script" uid="uid://b5v3orwbephnj" path="res://Characters/Enemies/Monster/MonsterStates/MonsterAttackingState.gd" id="8_fcqrr"]
[ext_resource type="Script" uid="uid://b67wslm8oirdo" path="res://Characters/Enemies/Monster/MonsterStates/MonsterReelingState.gd" id="10_6r2c4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q8gf7"]
resource_local_to_scene = true
shader = ExtResource("2_q8gf7")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_percent = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_q8gf7"]
atlas = ExtResource("2_ue8vv")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rj3aj"]
atlas = ExtResource("2_ue8vv")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oiitb"]
atlas = ExtResource("2_ue8vv")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6s48r"]
atlas = ExtResource("2_ue8vv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lljtl"]
atlas = ExtResource("2_ue8vv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6r2c4"]
atlas = ExtResource("2_ue8vv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfj5b"]
atlas = ExtResource("2_ue8vv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mi2vu"]
atlas = ExtResource("2_ue8vv")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_fpaif"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8gf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rj3aj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oiitb")
}],
"loop": false,
"name": &"attack",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6s48r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lljtl")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r2c4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfj5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mi2vu")
}],
"loop": false,
"name": &"windup",
"speed": 6.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_8mwhe"]
atlas = ExtResource("2_ih4cu")
region = Rect2(50, 48, 12, 15)

[sub_resource type="Gradient" id="Gradient_q8gf7"]
colors = PackedColorArray(1, 1, 1, 0.588235, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_6r2c4"]
gradient = SubResource("Gradient_q8gf7")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_oiitb"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 18.0
angle_min = 1.07288e-05
angle_max = 1.07288e-05
gravity = Vector3(0, -50, 0)
color_ramp = SubResource("GradientTexture1D_6r2c4")
turbulence_enabled = true
turbulence_noise_strength = 20.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6r2c4"]
radius = 8.0
height = 28.0

[sub_resource type="Animation" id="Animation_q8gf7"]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/flash_percent")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.3, 0.3, 1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_rj3aj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/flash_percent")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.3, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oiitb"]
_data = {
&"RESET": SubResource("Animation_rj3aj"),
&"hit": SubResource("Animation_q8gf7")
}

[sub_resource type="CircleShape2D" id="2"]
radius = 75.0

[sub_resource type="LabelSettings" id="LabelSettings_5y84s"]
font = ExtResource("3_801wt")
font_size = 9
font_color = Color(1, 0, 1, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 0.478431)

[node name="Monster" type="CharacterBody2D"]
z_index = 9
collision_layer = 10
collision_mask = 101
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_q8gf7")
sprite_frames = SubResource("SpriteFrames_fpaif")
animation = &"windup"
autoplay = "idle"

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
texture = SubResource("AtlasTexture_8mwhe")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(2, 5)
amount = 15
draw_order = 2
trail_lifetime = 0.5
trail_sections = 20
process_material = SubResource("ParticleProcessMaterial_oiitb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_6r2c4")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_max_distance = 50.0
navigation_layers = 2
simplify_path = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." groups=["sfx_stream_players"]]
stream = ExtResource("4_jfj5b")
volume_db = 5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_oiitb")
}

[node name="AggroRange" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroRange"]
shape = SubResource("2")

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DamageArea"]
polygon = PackedVector2Array(16, -10, 12, -17, 0, -25, 10, -24, 21, -19, 26, -10, 28, 0, 26, 10, 21, 19, 10, 24, 0, 25, 12, 17, 16, 10, 18, 0)

[node name="Indicator" type="Polygon2D" parent="DamageArea"]
visible = false
color = Color(1, 0, 0, 0.509804)
polygon = PackedVector2Array(16, -10, 12, -17, 0, -25, 10, -24, 21, -19, 26, -10, 28, 0, 26, 10, 21, 19, 10, 24, 0, 25, 12, 17, 16, 10, 18, 0)

[node name="PathTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="StatusLabel" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = -18.0
offset_top = -14.0
offset_right = 18.0
offset_bottom = 1.0
text = "STUN"
label_settings = SubResource("LabelSettings_5y84s")

[node name="SubViewport" type="SubViewport" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="SubViewport"]
offset_right = 40.0
offset_bottom = 40.0

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_8alai")
initial_state = NodePath("Idle")

[node name="Chase" type="Node" parent="StateMachine" node_paths=PackedStringArray("monster")]
script = ExtResource("5_3nu2b")
monster = NodePath("../..")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("monster")]
script = ExtResource("6_y0a0h")
monster = NodePath("../..")

[node name="Stunned" type="Node" parent="StateMachine" node_paths=PackedStringArray("monster")]
script = ExtResource("7_r742e")
monster = NodePath("../..")

[node name="Attacking" type="Node" parent="StateMachine" node_paths=PackedStringArray("monster")]
script = ExtResource("8_fcqrr")
monster = NodePath("../..")

[node name="Reeling" type="Node" parent="StateMachine" node_paths=PackedStringArray("monster")]
script = ExtResource("10_6r2c4")
monster = NodePath("../..")
metadata/_custom_type_script = "uid://b67wslm8oirdo"

[connection signal="body_entered" from="AggroRange" to="." method="_on_AggroRange_body_entered"]
[connection signal="timeout" from="PathTimer" to="." method="_on_path_timer_timeout"]
